# opencode-memory

./: .env.example  .gitignore  Cargo.toml  README.md  install.sh  package.json  tsconfig.json
cloudflare-worker/: README.md  wrangler.toml
cloudflare-worker/src/: index.ts
commands/: mem-doctor.md  mem-purge.md  mem-stats.md
migrations/: 001_init.sql  002_fixes_and_features.sql  003_redaction_meta.sql
scripts/: install.sh  uninstall.sh  verify.sh
src/: cli.ts  db.ts  embeddings.rs  extractor.rs  injector.rs  lib.rs  main.rs  metrics.ts  migrate.ts  models.rs  plugin.ts  privacy.ts  queue.ts  sanitizer.rs  sdk.ts  search.ts  secrets.ts  storage.rs
src/tools/: mem-search.ts
src/utils/: safeJson.ts
tests/: integration.rs  privacy.test.ts  safeJson.test.ts  sdk-auth.test.ts  secrets.test.ts
